--- a/environment.yml
+++ b/environment.yml
@@ -70,7 +70,7 @@ dependencies:
   - pywin32=302=py39hb82d6ee_2
   - pyzmq=22.3.0=py39he46f08e_1
   - qt=5.9.7=vc14h73c81de_0
-  - scipy=1.7.1=py39hbe87c03_2
+  - scipy>=1.13.0
   - seaborn=0.11.2=pyhd3eb1b0_0
   - setuptools=58.0.4=py39haa95532_0
   - sip=4.19.13=py39hd77b12b_0
